Debugging why queryStatus is crashing